# kaitaiStructCompile.py

./: .gitignore  .gitlab-ci.yml  Doxyfile  MANIFEST.in  ReadMe.md  pyproject.toml
kaitaiStructCompile/: ICompiler.py  KaitaiCompilerException.py  __init__.py  backendSelector.py  colors.py  defaults.py  postprocessors.py  repo.py  utils.py
kaitaiStructCompile/buildSystemPlugins/: common.py  hatchling.py  poetry.py  setuptools.py  utils.py
kaitaiStructCompile/schemas/: __init__.py  validators.py
kaitaiStructCompile/schemas/schemas/: config.schema.json
tests/: test.py
