[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "kaitaiStructCompile"
authors = [{name = "KOLANICH"}]
description = "the package to compile .ksy into .py while installing/building a python package"
readme = "ReadMe.md"
keywords = ["KaitaiStruct", "compiler", "binary format", "setuptools", "automation"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Framework :: Hatch",
	"Framework :: Setuptools Plugin",
]
requires-python = ">=3.4"
dependencies = [
	"setuptools > 46",
	"jsonschema", # git+https://github.com/Julian/jsonschema.git
	"GitPython", # @ git+https://github.com/gitpython-developers/GitPython.git
]
dynamic = ["version"]

[project.optional-dependencies]
toml = ["tomli"] # @ git+https://github.com/hukkin/tomli.git
applypatches = ["patch-ng"] # @ git+https://github.com/conan-io/python-patch-ng.git
lazy_init = ["lazy_object_proxy"]  # @ git+https://github.com/ionelmc/python-lazy-object-proxy.git

[project.urls]
Homepage = "https://github.com/kaitaiStructCompile/kaitaiStructCompile.py"

[project.entry-points."distutils.commands"]
kaitai_transpile = "kaitaiStructCompile.buildSystemPlugins.setuptools:kaitai_transpile"

[project.entry-points."distutils.setup_keywords"]
kaitai = "kaitaiStructCompile.buildSystemPlugins.setuptools:kaitaiHelperSetupPy"

[project.entry-points."setuptools.finalize_distribution_options"]
"tool.kaitai @ {\"only\":\"toml\"}" = "kaitaiStructCompile.buildSystemPlugins.setuptools:kaitaiHelperPyProjectToml"

# If any errors about repeated registration of `poetry` plugin emerge, you should try to remove `poetry` virtualenvs first by `rm -rf /home/cltm/.cache/pypoetry/virtualenvs`

[project.entry-points."poetry.plugin"]
kaitai_transpile = "kaitaiStructCompile.buildSystemPlugins.poetry:KaitaiPoetryPlugin"

# disabled because it seems there is a bug in poetry: application plugins are activated twice
[project.entry-points."poetry.application.plugin"]
kaitai_transpile = "kaitaiStructCompile.buildSystemPlugins.poetry:KaitaiPoetryApplicationPlugin"

[project.entry-points.hatch]
kaitai_transpile = "kaitaiStructCompile.buildSystemPlugins.hatchling"  # Must be a module, not a variable within it! The names of variables are hardcoded into `hatchling`

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
